--- a/dremo/templates/registration/login.html
+++ b/dremo/templates/registration/login.html
@@ -4,7 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Login - Dremo</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <style>
+        .page{
+            background: linear-gradient(to bottom right, grey, black);
+            height: 100vh;
+            color:white;
+            font-family: 'Josefin Sans', sans-serif;
+        }
+        .home {
+            position: absolute;
+        top: 50%;
+        left: 50%;
+        margin-right: -50%;
+            transform: translate(-50%, -50%);
+            text-align: center;
+            border:4px solid white;
+            padding:100px;
+            border-radius: 25px;
+        }
+
+        input{  
+            border:none;
+            border-radius: 4px;
+        }
+        </style>
 </head>
 <body>
     {% if form.errors %}
@@ -13,17 +42,63 @@
 
     {% if next %}
     <p>Hey, you cant access that page.</p>
-    {% endif %}
-
-    <form action="{% url 'login' %}" method="post">
-        {% csrf_token %}
-
-        <p>Username: </p>{{ form.username }} 
-        <p>Password: </p>{{ form.password }}
-
-        <input type="submit" value="login">
-        <input type="hidden" value="{{ next }}" name="next">
-    </form>
-
+    {% endif %}border-bottom:2px solid white;
+    <div>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03"
+                aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <a class="navbar-brand" href="/">
+                <!-- <img src="https://dremo.sblip.dev/images/logo.png" width="40" height="40" class="d-inline-block align-top" alt=""> -->
+                Dremo
+            </a>
+        
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+                <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/explore/">Explore</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/login/">Login <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/signup/">Get Started</a>
+                    </li>
+                    <!-- <li class="nav-item">
+                                <a class="nav-link disabled" href="#">Disabled</a>
+                            </li> -->
+                </ul>
+        </nav>
+        <div class="page">
+           <div class="home">
+               <h2>Hello Friend!</h2><br>
+                <form action="{% url 'login' %}" method="post">
+                    {% csrf_token %}
+                
+                    <h5>Username: </h5>{{ form.username }}<br><br>
+                    <h5>Password: </h5>{{ form.password }}
+                    <br><br>
+                    <button class="btn btn-outline-light" style="height:50px;width:200px;" type="submit">Log In.</button>
+                    <input type="hidden" value="{{ next }}" name="next">
+                </form><br>
+                <p>If you haven't created an account, <a href="/signup/">Sign up.</a></p>
+           </div>
+        </div>
+    </div>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
 </body>
 </html>
