--- a/dremo/templates/dremo/signup.html
+++ b/dremo/templates/dremo/signup.html
@@ -73,6 +73,11 @@
     <h2>Sign up</h2>
     <div class="home">
         <h3>Welcome to Dremo.</h3><br>
+        {{ form.username.errors }}
+        {{ form.email.errors }}
+        {{ form.password1.errors }}
+        {{ form.password2.errors }}
+        
         <form method="post">
             {% csrf_token %}
             <div class="row">
