--- a/dremo/templates/dremo/account_activation_invalid.html
+++ b/dremo/templates/dremo/account_activation_invalid.html
@@ -1,1 +1,34 @@
-<h1>This link is invalid :(</h1>
+<style>
+
+    body{
+        height:100%;
+        width:100%;
+        margin:0;
+    }
+        .page{
+            background: linear-gradient(to bottom right, grey, black);
+            height: 100vh;
+            color:white;
+            font-family: monospace;
+        }
+        .home {
+            position: absolute;
+        top: 50%;
+        left: 50%;
+        margin-right: -50%;
+            transform: translate(-50%, -50%);
+            text-align: center;
+            border:4px solid white;
+            padding:100px;
+            border-radius: 25px;
+        }
+
+</style>
+
+<div class="page">
+    <div class="home">
+        <h1>Invalid Link</h1>
+        <p>This link has already been used for logging into an account, please do the procedure again.</p>
+        <p>Made by the <b>Dremo Team</b>. Have a nice day using Dremo.</p>
+    </div>
+</div>
