--- a/dremo/templates/dremo/account_activation_sent.html
+++ b/dremo/templates/dremo/account_activation_sent.html
@@ -1,3 +1,35 @@
-<h1>To verify that your email is legit, there has been an email sent to your account.</h1>
-<p>Please check your email and click on the link to verify your account.</p>
-<p>If you don't see the email, please check your spam folder.</p>
+<style>
+    body {
+        height: 100%;
+        width: 100%;
+        margin: 0;
+    }
+
+    .page {
+        background: linear-gradient(to bottom right, grey, black);
+        height: 100vh;
+        color: white;
+        font-family: monospace;
+    }
+
+    .home {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin-right: -50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+        border: 4px solid white;
+        padding: 100px;
+        border-radius: 25px;
+    }
+</style>
+
+<div class="page">
+    <div class="home">
+        <h4>To verify that your email is <b>YOUR</b> email, there has been an email sent to your account.</h1>
+        <p>Please check your email and click on the link to verify your account.</p>
+        <p>If you don't see the email, please check your spam folder.</p>
+      <h3><b><a href="javascript:history.back()" style="color:white;">Go back.</a></b></h3>
+    </div>
+</div>
